// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots MacroProduct Macro Product Default 1`] = `
<div
  className="sc-gKAblj fcDYJF"
>
  <div
    className="macro-product-name-downloads"
  >
    <h2
      className="macro-product-name"
    >
      rail brake
    </h2>
    <div
      className="sc-jSFkmK cQjiJW"
    >
      <a
        data-for="manual-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip tf09474fb-bdd0-4b75-a635-3e87c177e942 place-top type-dark"
          data-id="tooltip"
          id="manual-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.tf09474fb-bdd0-4b75-a635-3e87c177e942 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.tf09474fb-bdd0-4b75-a635-3e87c177e942.place-top {
        margin-top: -10px;
    }
    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-top::before {
        border-top: 8px solid transparent;
    }
    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-bottom {
        margin-top: 10px;
    }
    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-left {
        margin-left: -10px;
    }
    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-left::before {
        border-left: 8px solid transparent;
    }
    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-right {
        margin-left: 10px;
    }
    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-right::before {
        border-right: 8px solid transparent;
    }
    .tf09474fb-bdd0-4b75-a635-3e87c177e942.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Manual
          </span>
        </div>
        <img
          alt="Manual"
          src="manual.svg"
        />
      </a>
      <a
        data-for="drawings-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip taa98d84d-62eb-4c56-9d14-55b7d02da59b place-top type-dark"
          data-id="tooltip"
          id="drawings-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.taa98d84d-62eb-4c56-9d14-55b7d02da59b {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-top {
        margin-top: -10px;
    }
    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-top::before {
        border-top: 8px solid transparent;
    }
    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-bottom {
        margin-top: 10px;
    }
    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-left {
        margin-left: -10px;
    }
    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-left::before {
        border-left: 8px solid transparent;
    }
    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-right {
        margin-left: 10px;
    }
    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-right::before {
        border-right: 8px solid transparent;
    }
    .taa98d84d-62eb-4c56-9d14-55b7d02da59b.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Drawings
          </span>
        </div>
        <img
          alt="Drawings"
          src="drawings.svg"
        />
      </a>
    </div>
  </div>
  <img
    alt="Product with id: 1"
    className="macro-product-image"
    src="https://www.rimagroup.com/wp-content/uploads/2019/06/Rail-Brake-TM.png"
  />
</div>
`;

exports[`Storyshots MacroProduct Macro Product No Thumb 1`] = `
<div
  className="sc-gKAblj fcDYJF"
>
  <div
    className="macro-product-name-downloads"
  >
    <h2
      className="macro-product-name"
    >
      rail brake
    </h2>
    <div
      className="sc-jSFkmK cQjiJW"
    >
      <a
        data-for="manual-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip t91eb11ee-a949-47bd-82e8-bd1126b4e122 place-top type-dark"
          data-id="tooltip"
          id="manual-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.t91eb11ee-a949-47bd-82e8-bd1126b4e122 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-top {
        margin-top: -10px;
    }
    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-top::before {
        border-top: 8px solid transparent;
    }
    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-bottom {
        margin-top: 10px;
    }
    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-left {
        margin-left: -10px;
    }
    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-left::before {
        border-left: 8px solid transparent;
    }
    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-right {
        margin-left: 10px;
    }
    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-right::before {
        border-right: 8px solid transparent;
    }
    .t91eb11ee-a949-47bd-82e8-bd1126b4e122.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Manual
          </span>
        </div>
        <img
          alt="Manual"
          src="manual.svg"
        />
      </a>
      <a
        data-for="drawings-tip"
        data-tip={true}
        href="https://www.dropbox.com/s/boc8ids41qq4ysx/manual.pdf?dl=0"
        rel="noopener noreferrer"
        target="_blank"
      >
        <div
          className="__react_component_tooltip t5601bb27-fe7d-4d32-8076-b74dc50e0ca7 place-top type-dark"
          data-id="tooltip"
          id="drawings-tip"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": "
  	.t5601bb27-fe7d-4d32-8076-b74dc50e0ca7 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-top {
        margin-top: -10px;
    }
    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-top::before {
        border-top: 8px solid transparent;
    }
    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-bottom {
        margin-top: 10px;
    }
    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-left {
        margin-left: -10px;
    }
    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-left::before {
        border-left: 8px solid transparent;
    }
    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-right {
        margin-left: 10px;
    }
    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-right::before {
        border-right: 8px solid transparent;
    }
    .t5601bb27-fe7d-4d32-8076-b74dc50e0ca7.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }
  ",
              }
            }
          />
          <span>
            Download Drawings
          </span>
        </div>
        <img
          alt="Drawings"
          src="drawings.svg"
        />
      </a>
    </div>
  </div>
  <img
    alt="Product with id: 1"
    className="macro-product-image"
    src=""
  />
</div>
`;
